# glove-monorepo

./: .gitignore  Cargo.toml  README.md  build-service-enclave.sh  build.sh  start-enclave.sh
.github/workflows/: build.yml  glove-build-env.yml  pr.yml  pull-request.yml  release.yml  rust.yml  test.yml
assets/ansible/roles/glove/defaults/: main.yml
assets/ansible/roles/glove/files/: glove.service
assets/ansible/roles/glove/handlers/: main.yml
assets/ansible/roles/glove/tasks/: main.yml
assets/ansible/roles/glove/templates/: glove.service
assets/terraform/: outputs.tf  vm.tf
client/: Cargo.toml
client-interface/: Cargo.toml
client-interface/src/: lib.rs  subscan.rs
client/src/: lib.rs  main.rs  verify.rs
common/: Cargo.toml  sample-aws-nitro-attestation-doc
common/src/: attestation.rs  lib.rs  nitro.rs
common/test-resources/: debug-nitro-attestation-bundle-envelope  glove-proof-lite  secure-nitro-attestation-bundle-envelope  vote-request-example.mjs
devops/ansible/: ansible.cfg  glove.yml  hosts.ini  inventory_aws_ec2.yml  users.yml
devops/ansible/group_vars/: all.yml
devops/ansible/roles/extra_ssh/tasks/: main.yml
devops/ansible/roles/glove/defaults/: main.yml
devops/ansible/roles/glove/handlers/: main.yml
devops/ansible/roles/glove/tasks/: main.yml
devops/ansible/roles/glove/templates/: glove.service
devops/terraform/: data.tf  db.tf  dns.tf  iam.tf  lb.tf  outputs.tf  provider.tf  vm.tf
docs/: technical-design.md
enclave/: Cargo.toml  Dockerfile
enclave-interface/: Cargo.toml
enclave-interface/src/: lib.rs
enclave/src/: lib.rs  main.rs
glove-build-env/: Dockerfile
service/: Cargo.toml
service/src/: dynamodb.rs  enclave.rs  lib.rs  main.rs  mixing.rs  storage.rs  subscan.rs
src/: lib.rs  main.rs  mixing.rs
stress-tool/: Cargo.toml
stress-tool/src/: main.rs
