[workspace]
members = [
    "common",
    "service",
    "enclave",
    "enclave-interface",
    "client",
    "client-interface",
    "stress-tool"
]
resolver = "2"

[workspace.package]
homepage = "https://projectglove.io/"
repository = "https://github.com/projectglove/glove-monorepo/"
version = "0.0.16"

[workspace.dependencies]
anyhow = "1.0.86"
rand = "0.8.5"
sp-core = "33.0.1"
sp-runtime = "37.0.0"
ss58-registry = "1.47.0"
subxt = "0.37.0"
subxt-core = { version = "0.37.0", features = ["substrate-compat"] }
subxt-signer = { version = "0.37.0", features = ["subxt"] }
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
serde_bytes = "0.11.14"
serde_cbor = "0.11.2"
serde_json = "1.0.117"
serde_with = "3.8.1"
parity-scale-codec = "3.6.12"
bigdecimal = "0.4.3"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0" }
reqwest = { version = "0.12.4" }
reqwest-middleware = "0.3.2"
reqwest-retry = "0.6.0"
strum = { version = "0.26.2", features = ["derive"] }
axum = "0.7.5"
itertools = "0.13.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tempfile = "3.2.0"
tokio-vsock = "0.5.0"
nix = "0.27.1"
cfg-if = "1.0.0"
aws-nitro-enclaves-nsm-api = "0.4.0"
aws-nitro-enclaves-cose = "0.5.2"
openssl = "0.10.66"
sha2 = "0.10.8"
flate2 = "1.0.30"
aws-config = "1.5.4"
aws-sdk-dynamodb = "1.38.0"
aws-smithy-runtime-api = "1.7.1"
