[package]
name = "client-interface"
description = "Interface between the client and service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
ss58-registry.workspace = true
subxt.workspace = true
subxt-core.workspace = true
subxt-signer.workspace = true
thiserror.workspace = true
serde.workspace = true
parity-scale-codec.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
serde_json.workspace = true
hex.workspace = true
rand.workspace = true
