[package]
name = "client-interface"
description = "Interface between the client and service"
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
ss58-registry.workspace = true
subxt.workspace = true
subxt-core.workspace = true
subxt-signer.workspace = true
thiserror.workspace = true
serde.workspace = true
parity-scale-codec.workspace = true
tokio = { workspace = true, features = ["sync"] }
serde_with.workspace = true
reqwest = { workspace = true, features = ["json"] }
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
rand.workspace = true
