[package]
name = "client-interface"
description = "Interface between the client and service"
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
ss58-registry.workspace = true
subxt = { workspace = true, features = ["unstable-reconnecting-rpc-client"] }
subxt-core.workspace = true
subxt-signer.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
parity-scale-codec.workspace = true
tokio = { workspace = true, features = ["sync"] }
reqwest = { workspace = true, features = ["json"] }
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
