[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1.0.86"
bigdecimal = "0.4.3"
clap = { version = "4.5.4", features = ["derive"] }
subxt = "0.37.0"
subxt-signer = { version = "0.37.0", features = ["subxt"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.4", features = ["json"] }
strum = { version = "0.26.2", features = ["derive"] }
