[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
client-interface = { path = "../client-interface" }
anyhow.workspace = true
bigdecimal.workspace = true
clap.workspace = true
subxt.workspace = true
subxt-signer.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
reqwest.workspace = true
strum.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
