[package]
name = "common"
description = "Common types and utilities used by all three components: service, client, and enclave."
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition = "2021"

[dependencies]
parity-scale-codec.workspace = true
rand.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
aws-nitro-enclaves-cose.workspace = true
aws-nitro-enclaves-nsm-api.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
openssl = { workspace = true, features = ["vendored"] }
sha2.workspace = true
thiserror.workspace = true
flate2.workspace = true
subxt.workspace = true

[dev-dependencies]
serde_json.workspace = true
subxt-signer.workspace = true
