[package]
name = "enclave-interface"
description = "Interface between the enclave and service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
parity-scale-codec.workspace = true
sp-runtime.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
