[package]
name = "enclave-interface"
description = "Interface between the enclave and service"
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition = "2021"

[dependencies]
common = { path = "../common" }
parity-scale-codec.workspace = true
sp-runtime.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock.workspace = true
nix = { workspace = true, features = ["socket"] }
