[package]
name = "enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
enclave-interface = { path = "../enclave-interface" }
bigdecimal.workspace = true
rand.workspace = true
anyhow.workspace = true
parity-scale-codec.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros"] }
