[package]
name = "enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
enclave-interface = { path = "../enclave-interface" }
bigdecimal.workspace = true
rand.workspace = true
anyhow.workspace = true
parity-scale-codec.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros"] }
cfg-if.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock.workspace = true
nix = { workspace = true, features = ["socket"] }
aws-nitro-enclaves-nsm-api.workspace = true

[dev-dependencies]
sp-core.workspace = true
sp-runtime.workspace = true
