[package]
name = "enclave"
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition = "2021"

[dependencies]
common = { path = "../common" }
enclave-interface = { path = "../enclave-interface" }
bigdecimal.workspace = true
rand.workspace = true
anyhow.workspace = true
parity-scale-codec.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros"] }
cfg-if.workspace = true
serde_bytes.workspace = true
sp-core.workspace = true
sha2.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock.workspace = true
nix = { workspace = true, features = ["socket"] }
aws-nitro-enclaves-nsm-api.workspace = true

[dev-dependencies]
sp-runtime.workspace = true
