[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
enclave = { path = "../enclave" }   #TODO Remove this once enclave is separate binary
enclave-interface = { path = "../enclave-interface" }
client-interface = { path = "../client-interface" }
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
sp-runtime.workspace = true
subxt.workspace = true
subxt-signer.workspace = true
thiserror.workspace = true
tokio.workspace = true
itertools.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
parity-scale-codec.workspace = true
