[package]
name = "service"
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition = "2021"

[dependencies]
common = { path = "../common" }
enclave-interface = { path = "../enclave-interface" }
client-interface = { path = "../client-interface" }
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
sp-runtime.workspace = true
subxt.workspace = true
subxt-signer.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
itertools.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
parity-scale-codec.workspace = true
tempfile.workspace = true
cfg-if.workspace = true
serde.workspace = true
reqwest.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock.workspace = true
nix = { workspace = true, features = ["socket"] }
